force-app/main/default/objects/WGB_Module_Orifice__c/WGB_Module_Orifice__c.object-meta.xml
<CustomObject>
    <label>WGB Module Orifice</label>
    <nameField>
        <label>WGB Module Orifice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGB Module Orifice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>