force-app/main/default/objects/WGB_Module_Orifice__c/fields/GasGroup__c.field-meta.xml
<CustomField>
    <fullName>GasGroup__c</fullName>
    <label>GasGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>