force-app/main/default/objects/WGB_Module_Orifice__c/fields/GasMax__c.field-meta.xml
<CustomField>
    <fullName>GasMax__c</fullName>
    <label>GasMax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>