force-app/main/default/objects/WGB_Module_Orifice__c/fields/GasUOM__c.field-meta.xml
<CustomField>
    <fullName>GasUOM__c</fullName>
    <label>GasUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>