force-app/main/default/objects/WGB_Module_Orifice__c/fields/OrificeNum__c.field-meta.xml
<CustomField>
    <fullName>OrificeNum__c</fullName>
    <label>OrificeNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>