force-app/main/default/objects/WGB_Module_Orifice__c/fields/Phantom__c.field-meta.xml
<CustomField>
    <fullName>Phantom__c</fullName>
    <label>Phantom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>