force-app/main/default/objects/WGB_Module_Orifice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>GasGroup__c</columns>
    <columns>GasMax__c</columns>
    <columns>GasMin__c</columns>
    <columns>GasUOM__c</columns>
    <columns>KitupReqd__c</columns>
    <columns>ModulePN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>